<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_perceptor_realsense_d456</name>
  <version>0.1.0</version>
  <description>
    Isaac Perceptor-like stack (cuVSLAM + NvBlox + RViz2) optimized for
    Intel RealSense D456 on Jetson AGX Orin.
    Provides a single launch entry-point that starts the RealSense D456 driver,
    realsense_splitter, cuVSLAM, NvBlox, and RViz2.
  </description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch utilities -->
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>

  <!-- Sensor -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense_splitter</exec_depend>

  <!-- Perception -->
  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nvblox_rviz_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
